--- a/main.html
+++ b/main.html
@@ -3,13 +3,36 @@
 <html>
 
 <head>
+	<title>Car Insurance Form</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form action="" method="post" autocomplete="on">
+		<label for="name">Name:</label>
+		<input type="text" id="#name" placeholder="enter your name"><br><br>
+		<label for="email">Email</label>
+		<input type="email" id="#email" placeholder="enter your email"><br><br>
+		<label for="gender">Gender:</label>
+		<input type="radio" id="male" name="gender" value="MALE">
+		<label for="male">MALE</label>
+		<input type="radio" id="female" name="gender" value="FEMALE">
+		<label for="female">FEMALE</label><br><br>
+		<label for="car brands">Car Brands:</label>
+		<select name="name" id="#cars">
+			<option value="bmw">BMW</option>
+			<option value="audi">Audi</option>
+			<option value="mercedez">Mercedez</option>
+		</select><br><br>
+		<label for="age">Car Age</label>
+		<input type="number" min="1" id="#carage"><br><br>
+		<label for="date">Date of Purchase:</label>
+		<input type="date" id="#dop"><br><br>
+		<label for="password">Password</label>
+		<input type="password" id="#password"><br><br>
+		<button id="#">Submit</button>
+	</form>
 
 </body>
 
