--- a/main.html
+++ b/main.html
@@ -11,26 +11,26 @@
 	<!-- the entire body must be written by student -->
 	<form action="" method="post" autocomplete="on">
 		<label for="name">Name:</label>
-		<input type="text" id="#name" placeholder="enter your name"><br><br>
+		<input type="text" id="name" placeholder="enter your name" required><br><br>
 		<label for="email">Email</label>
-		<input type="email" id="#email" placeholder="enter your email"><br><br>
+		<input type="email" id="email" placeholder="enter your email" required><br><br>
 		<label for="gender">Gender:</label>
-		<input type="radio" id="male" name="gender" value="MALE">
+		<input type="radio" id="male" name="gender" value="MALE" required>
 		<label for="male">MALE</label>
-		<input type="radio" id="female" name="gender" value="FEMALE">
+		<input type="radio" id="female" name="gender" value="FEMALE" required>
 		<label for="female">FEMALE</label><br><br>
 		<label for="car brands">Car Brands:</label>
-		<select name="name" id="#cars">
+		<select name="name" id="cars" required>
 			<option value="bmw">BMW</option>
 			<option value="audi">Audi</option>
 			<option value="mercedez">Mercedez</option>
 		</select><br><br>
 		<label for="age">Car Age</label>
-		<input type="number" min="1" id="#carage"><br><br>
+		<input type="number" min="1" id="carage" required><br><br>
 		<label for="date">Date of Purchase:</label>
-		<input type="date" id="#dop"><br><br>
+		<input type="date" id="dop" required><br><br>
 		<label for="password">Password</label>
-		<input type="password" id="#password"><br><br>
+		<input type="password" id="password" required><br><br>
 		<button id="#">Submit</button>
 	</form>
 
