--- a/main.html
+++ b/main.html
@@ -19,19 +19,19 @@
 		<label for="male">MALE</label>
 		<input type="radio" id="female" name="gender" value="FEMALE" required>
 		<label for="female">FEMALE</label><br><br>
-		<label for="car brands">Car Brands:</label>
+		<label for="cars">Car Brands:</label>
 		<select name="name" id="cars" required>
 			<option value="bmw">BMW</option>
 			<option value="audi">Audi</option>
 			<option value="mercedez">Mercedez</option>
 		</select><br><br>
-		<label for="age">Car Age</label>
+		<label for="carage">Car Age</label>
 		<input type="number" min="1" id="carage" required><br><br>
-		<label for="date">Date of Purchase:</label>
+		<label for="dop">Date of Purchase:</label>
 		<input type="date" id="dop" required><br><br>
 		<label for="password">Password</label>
 		<input type="password" id="password" required><br><br>
-		<button id="#">Submit</button>
+		<button type="submit">Submit</button>
 	</form>
 
 </body>
